# PetitRPG

./: .gitignore  CMakeLists.txt  README.md
lib/allegro-5.2.2.0/: CHANGES-5.2.txt  allegro.mft
lib/allegro-5.2.2.0/android/: android1.bat
lib/allegro-5.2.2.0/docs/html/refman/: acodec.html  audio.html  color.html  config.html  direct3d.html  display.html  events.html  file.html  fixed.html  font.html  fshook.html  fullscreen_mode.html  getting_started.html  graphics.html  haptic.html  image.html  index.html  index_all.html  joystick.html  keyboard.html  main.html  memfile.html  memory.html  misc.html  monitor.html  mouse.html  native_dialog.html  opengl.html  path.html  physfs.html  platform.html  primitives.html  shader.html  state.html  (+8 more)
lib/allegro-5.2.2.0/docs/man/: ALLEGRO_GLYPH.3  al_android_get_activity.3  al_android_get_jni_env.3  al_backup_dirty_bitmap.3  al_backup_dirty_bitmaps.3  al_color_hsl.3  al_color_hsl_to_rgb.3  al_color_hsv.3  al_color_hsv_to_rgb.3  al_get_bitmap_depth.3  al_get_bitmap_samples.3  al_get_errno.3  al_get_glyph.3  al_get_glyph_advance.3  al_get_new_bitmap_depth.3  al_get_new_bitmap_samples.3  al_get_opengl_extension_list.3  al_init_acodec_addon.3  al_set_errno.3  al_set_new_bitmap_depth.3  al_set_new_bitmap_samples.3  al_set_shader_float_vector.3  al_set_shader_int_vector.3  al_set_shader_matrix.3  al_set_target_bitmap.3
src/: PetitRpg.cpp
src/Engine/: App.cpp  App.hpp  Display.cpp  Display.hpp  Game.cpp  Game.hpp
src/Exception/: AppException.hpp  DisplayException.hpp
src/Model/: Entity.hpp
src/Utils/: Vector2F.hpp  Vector2I.hpp
